============================================================================

Version 6.6.4 - not yet released
* map
  - fix stuttering terrain on Windows CE
  - fix multi-touch pan gesture (#2684)
* devices
  - FLARM: work around a Garrecht TRX-1090 firmware bug (#2745, #2749)
  - Volkslogger: increase timeout to calculate security (#2910)
  - fix bogus error message after pressing "Cancel"

Version 6.6.3 - 2013/07/02
* map
  - fill FAI triangle areas on Windows
* devices
  - FLARM: improve task declaration reliability
  - LX: support Nano firmware 2.10 (#2819)
* Android
  - fix compatibility issue with Android 2.2
  - detect when internal GPS is lost on Android 2.3 and older (#2929)
* user interface
  - fix unit display for pressure in flight setup dialog (#2933)
* data files
  - added "Pilatus B4" polar

Version 6.6.2 - 2013/06/12
* map
  - fix misplaced topography labels (#2564)
  - fix keyboard panning with track up (#2908)
* infoboxes
  - ensure that the unit symbol is visible
  - fix ballast display in vario gauge (#2911)
* tasks
  - update all settings after task type change
* devices
  - Volkslogger: fix IGC file download on Windows CE
  - EWmicroRecorder: fix corrupt task declaration (#2921)
  - fix potential crash when garbage is received from device
  - fix IOIO reconnect
  - generate G record even when first device has no GPS (#2849)
* cross section
  - also display unknown airspace types (#2884)
* Raspberry Pi
  - fix instant crash (#2922)
* Altair
  - never override data path (#2509)
* Android
  - faster startup

Version 6.6.1 - 2013/05/08
* cross section
  - fix airspace display after display rotation (#2825)
* user interface
  - fix malformed name in airspace warning dialog (#2813)
  - don't lost focus to waypoint list on Altair (#2835)
  - don't forget map zoom when returning to map (#2805)
* devices
  - indicate duplicate devices in list
  - allow using more than one TCP/UDP device