@@ -10,6 +10,7 @@ Version 6.6.4 - not yet released
   - FLARM: work around a Garrecht TRX-1090 firmware bug (#2745, #2749)
   - Volkslogger: increase timeout to calculate security (#2910)
   - fix bogus error message after pressing "Cancel"
+  - show Bluetooth name instead of MAC address in device list
 
 Version 6.6.3 - 2013/07/02
 * map
